--- a/src/basic_cleaning/conda.yml
+++ b/src/basic_cleaning/conda.yml
@@ -3,6 +3,11 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - python=3.8
+  - pandas=1.2.3
   - pip=20.3.3
   - pip:
       - wandb==0.10.31
+      - pyarrow
+      - fastparquet
+      - git+https://github.com/udacity/nd0821-c2-build-model-workflow-starter.git#egg=wandb-utils&subdirectory=components
