--- a/config.yaml
+++ b/config.yaml
@@ -33,6 +33,25 @@ modeling:
     # Here -1 means all available cores
     n_jobs: -1
     criterion: mae
-    max_features: 0.5
+    max_features: 1
     # DO not change the following
     oob_score: true
+
+criterion
+mae
+max_depth
+15
+max_features
+1
+min_samples_leaf
+3
+min_samples_split
+4
+n_estimators
+100
+n_jobs
+-1
+oob_score
+true
+random_state
+42
