--- a/src/basic_cleaning/conda.yml
+++ b/src/basic_cleaning/conda.yml
@@ -10,4 +10,5 @@ dependencies:
       - wandb==0.10.31
       - pyarrow
       - fastparquet
+      - jupyter_contrib_nbextensions
       - git+https://github.com/udacity/nd0821-c2-build-model-workflow-starter.git#egg=wandb-utils&subdirectory=components
